==> hfgdwuyi/canio_ext/src/bsp/bsp_dio.c <==
#include <stdio.h>
#include <stdbool.h>
#include <string.h>
#include <limits.h>
#include <stdlib.h>
#include <hal.h>
#include "bsp_dio.h"
#include "timing.h"
#include "terminal.h"
#define DIN_MAX (sizeof(pinCfgDin) / sizeof(pinCfgDin[0]))
#define DOUT_MAX (sizeof(pinCfgDout) / sizeof(pinCfgDout[0]))
#define DIN_BYTES ((DIN_MAX + CHAR_BIT - 1) / CHAR_BIT)
#define DOUT_BYTES ((DOUT_MAX + CHAR_BIT - 1) / CHAR_BIT)
#define DOUT_UI_LED_OUTPUT_PIN 20U
#define DOUT_UI_POWER_OUTPUT_PIN 21U
#define DIN_SUBIDX4_UI_POWER_DETECT_BIT 25U

static void bspDinInit(void)
{
    static timingTimer dinTimer;
    for (uint8_t i = 0; i < dinMax; i++)
    {
        // Configure GPIO pin
        GPIO_InitTypeDef pin = pinCfgDin[i].pin;
        (void)HAL_GPIO_Init(pinCfgDin[i].port, &pin);
    }

    GPIO_InitTypeDef uiPowerDetectRightPin = uiPowerDetectRight.pin;
    (void)HAL_GPIO_Init(uiPowerDetectRight.port, &uiPowerDetectRightPin);

    // Start periodic state read
    (void)timingAddTimer(&dinTimer, TIMING_TIMER_CYCLIC, 1, bspDinUpdate);
}

static void bspDinUpdate(void)
{
    static uint32_t debounceTime[DIN_MAX] = { 0 };
    for (uint8_t dinIndex = 0; dinIndex < dinMax; dinIndex++)
    {
        uint8_t bit  = dinIndex % CHAR_BIT;
        uint8_t byte = dinIndex / CHAR_BIT;
        // read din pins
        bool curState = bspDinReadPin(&pinCfgDin[dinIndex]);

        if (dinIndex == DIN_SUBIDX4_UI_POWER_DETECT_BIT)
        {
            curState = curState || bspDinReadPin(&uiPowerDetectRight);
        }

        bool oldValue = (dinState[byte] & (1 << bit)) == 0 ? 0 : 1;

        uint8_t debTime = dinSettings[dinIndex].deb_en ? dinSettings[dinIndex].deb_time : 0;

        // Debouncing
        if (oldValue != curState)
        {
            debounceTime[dinIndex]++;
            if (debounceTime[dinIndex] >= debTime)
            {
                if (curState != 0)
                {
                    dinState[byte] |= (1U << bit);
                }
                else
                {
                    dinState[byte] &= ~(1U << bit);
                }
                debounceTime[dinIndex] = 0;
            }
        }
        else
        {
            debounceTime[dinIndex] = 0;
        }
    }
}

static void bspDoutInit(void)
{
    for (uint8_t i = 0; i < doutMax; i++)
    {
        // Configure GPIO pin
        GPIO_InitTypeDef pin = pinCfgDout[i].pin;
        (void)HAL_GPIO_Init(pinCfgDout[i].port, &pin);
    }

    GPIO_InitTypeDef uiLedPinRight = uiLedOutputRight.pin;
    GPIO_InitTypeDef uiPowerPinRight = uiPowerOutputRight.pin;
    (void)HAL_GPIO_Init(uiLedOutputRight.port, &uiLedPinRight);
    (void)HAL_GPIO_Init(uiPowerOutputRight.port, &uiPowerPinRight);
}

void bspDoutSet(uint8_t pinNumber, bool state)
{
    if (pinNumber < doutMax)
    {
        bspDoutWritePin(&pinCfgDout[pinNumber], state);

        if (pinNumber == DOUT_UI_LED_OUTPUT_PIN)
        {
            bspDoutWritePin(&uiLedOutputRight, state);
        }
        else if (pinNumber == DOUT_UI_POWER_OUTPUT_PIN)
        {
            bspDoutWritePin(&uiPowerOutputRight, state);
        }
    }
}

bool bspDoutRead(uint8_t pinNumber)
{
    if (pinNumber < doutMax && (bool)HAL_GPIO_ReadPin(pinCfgDout[pinNumber].port, (uint16_t)pinCfgDout[pinNumber].pin.Pin))
    {
        return true;
    }
    return false;
}
